[project]
name = "ansible-module-golang-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "pollenjp", email = "polleninjp@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "autoflake8>=0.4.1",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "nox>=2023.4.22",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Library"
import_heading_firstparty = "First Party Library"
import_heading_localfolder = "Local Library"

[tool.mypy]
python_version = "3.11"
strict = true

# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_incomplete_stub = true
warn_unreachable = true

show_error_codes = true
enable_error_code = "ignore-without-code"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-rxX",
    "--capture=no",
    "-pno:logging",
    # "--cov",
    # "--cov-append",
    # "--cov-report=term-missing",
]
testpaths = "test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
